[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Apollo.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/ApolloDialogue.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/ApolloDialogueBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/scripts/DialogBox.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 0.486275 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("VBoxContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VBoxContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 584, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "enter"
tracks/0/type = "bezier"
tracks/0/path = NodePath("VBoxContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VBoxContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 820, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0, 584, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "exit"
tracks/0/type = "bezier"
tracks/0/path = NodePath("VBoxContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VBoxContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 584, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0, 820, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 1 )
}

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.726
anchor_right = 0.99
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 584.0
margin_right = 1427.2
margin_bottom = 805.94

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1411.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Opponent"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="Panel" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1411.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 154 )
custom_styles/panel = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/enter = SubResource( 4 )
anims/exit = SubResource( 3 )

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="done_writing" from="." to="." method="_on_DialogBox_done_writing"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
